Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44647

[REG][qt-Windows] Assertion in QtFontFamily::ensurePopulated()

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • None
    • 5.4.2
    • GUI: Font handling
    • None
    • Windows 7 x64
    • 5f2f38854f20e04dbd8ae25ed0b346b85450e116

    Description

      After I got the latest code from git 5.4 branch, Qt will assert in QtFontFamily::ensurePopulated():

      void QtFontFamily::ensurePopulated()
      {
          if (populated)
              return;
      
          QGuiApplicationPrivate::platformIntegration()->fontDatabase()->populateFamily(name);
          Q_ASSERT_X(populated, Q_FUNC_INFO, qPrintable(name));
      }
      

      When the assertion occurred, The font name is "Simsun". Since when EnumFontFamiliesEx() is called with "Simsun", the font family name in its callback will be "宋体" which is alias to "Simsun". But that will prevent QtFontFamily.populated of "Simsun" to be set to true.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            jianliang79 liang jian
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes